openshift/networkpolicy-web-allow-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-external
  namespace: bootwildfly
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - {}
